[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "montecarlo-pricer"
version = "0.1.0"
description = "High-performance Monte Carlo option pricer with multi-threading and SIMD"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest", "numpy", "pandas", "matplotlib"]

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
